initial sample detail checkpoint
